Removed n+1 query from enrollment fetching function